Update success message and styling in success.html

--- a/success.html
+++ b/success.html
@@ -1,17 +1,23 @@
-
 <!DOCTYPE html>
-<html lang="bn">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Payment Success</title>
+<title>Payment Successful</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{text-align:center;font-family:Arial;padding:50px;background:#eaffea}
+body{
+  text-align:center;
+  font-family:Arial;
+  background:#e8f5e9;
+  padding:50px;
+}
+h1{
+  color:#2e7d32;
+}
 </style>
 </head>
 <body>
-<h1>✅ Payment Successful</h1>
-<p>আপনার পেমেন্ট সফল হয়েছে</p>
-<p>ধন্যবাদ ❤️</p>
+<h1>✅ Thank You!</h1>
+<p>Your payment request has been sent.</p>
+<p>If payment is successful, we will process your order.</p>
 </body>
 </html>
