--- a/index.html
+++ b/index.html
@@ -2,47 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Online – Smart Digital Solutions</title>
+  <title>AI Online – Smart Digital Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <div class="logo">AI<span>Online</span></div>
+  <h1>AI Online</h1>
+  <p>Smart Digital & AI Based Services</p>
   <nav>
     <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<section class="hero">
-  <h1>Welcome to AI Online</h1>
-  <p>Smart AI Tools • Online Services • Digital Payments</p>
-  <a href="#services" class="btn">Explore Services</a>
-</section>
-
-<section id="services" class="services">
-  <h2>Our Services</h2>
+<div class="container">
 
   <div class="card">
-    <h3>AI Tools</h3>
-    <p>Online AI based smart tools for daily use.</p>
+    <h2>🚀 Welcome to AI Online</h2>
+    <p>
+      We provide modern AI solutions, online tools, and digital services
+      with fast, secure, and affordable systems.
+    </p>
   </div>
 
   <div class="card">
-    <h3>Online Payments</h3>
-    <p>UPI QR, Pay Button & WhatsApp Confirmation.</p>
+    <h2>💳 Online Payment</h2>
+    <p>Pay securely using UPI, QR Code and WhatsApp confirmation.</p>
+    <a class="btn" href="contact.html">Contact for Payment</a>
   </div>
 
-  <div class="card">
-    <h3>Web Solutions</h3>
-    <p>Low cost professional websites.</p>
-  </div>
-</section>
+</div>
 
 <footer>
-  <p>© 2026 AI Online | All Rights Reserved</p>
+  © 2026 AI Online | All Rights Reserved
 </footer>
 
 </body>
