--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,30 +9,29 @@
 <body>
 
 <header>
-  <div class="logo">AI<span>Online</span></div>
+  <h1>Contact Us</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<section class="contact">
-  <h1>Contact Us</h1>
-  <p>Have any questions? Feel free to contact.</p>
+<div class="container">
 
-  <div class="contact-box">
-    <p><strong>📧 Email:</strong> support@aionline.in.net</p>
-    <p><strong>📱 WhatsApp:</strong> 9800074626</p>
-    <p><strong>🌐 Website:</strong> aionline.in.net</p>
+  <div class="card">
+    <h2>📧 Get in Touch</h2>
+    <p>Name: AI Online</p>
+    <p>UPI: <b>9800074626@upi</b></p>
+
+    <a class="btn" href="https://wa.me/919800074626">
+      WhatsApp Us
+    </a>
   </div>
 
-  <a class="btn" href="https://wa.me/919800074626" target="_blank">
-    Chat on WhatsApp
-  </a>
-</section>
+</div>
 
 <footer>
-  <p>© 2026 AI Online</p>
+  © 2026 AI Online
 </footer>
 
 </body>
