Implement UPI payment section in contact.html
Added UPI payment options and buttons for payment confirmation.

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,33 @@
 <div class="container">
 
   <div class="card">
+    <h3>💳 Pay via UPI</h3>
+
+<img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=upi://pay?pa=9800074626@upi&pn=AI%20Online"
+     alt="UPI QR Code"
+     style="margin:15px 0;border-radius:10px;">
+
+<br>
+
+<a class="btn"
+   href="upi://pay?pa=9800074626@upi&pn=AI Online&cu=INR">
+   Pay Now
+</a>
+    <br><br>
+
+<a class="btn"
+   style="background:#25D366"
+   href="https://wa.me/919800074626?text=Payment%20Done%20for%20AI%20Online">
+   ✅ Payment Done (WhatsApp)
+</a>
+
+    <br><br>
+<a class="btn"
+   href="https://docs.google.com/forms/d/e/1FAIpQLSe632ftcEOxunfdnDS4tD1fgAj26WuEEIAcyUMciuSar96guw/viewform"
+   target="_blank">
+   📝 Submit Payment Details
+</a>
+    
     <h2>📧 Get in Touch</h2>
     <p>Name: AI Online</p>
     <p>UPI: <b>9800074626@upi</b></p>
