Add meta tags for SEO and author information
Added meta tags for description, keywords, and author.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>AI Online – Smart Digital Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  
+  <meta name="description" content="AI Online provides secure online payment, AI tools and digital services.">
+<meta name="keywords" content="AI Online, UPI Payment, Online Services, AI Tools">
+<meta name="author" content="AI Online">
 </head>
 <body>
 
