Modify HTML head section for SEO improvements
Updated title, description, and keywords meta tags.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Online – Smart Digital Services</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  
-  <meta name="description" content="AI Online provides secure online payment, AI tools and digital services.">
-<meta name="keywords" content="AI Online, UPI Payment, Online Services, AI Tools">
+  <title>AI Online Services | aionline.in.net</title>
+
+<meta name="description" content="AI Online Services, Online Help, Digital Solutions, Payment Based Services in India">
+
+<meta name="keywords" content="AI online, online services, AI help, digital services, payment website">
+
 <meta name="author" content="AI Online">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
