Add contact information and WhatsApp support note

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,14 @@
 
 <header>
   <h1>Contact Us</h1>
+
+<p>
+Email: support@aionline.in.net
+</p>
+
+<p>
+WhatsApp Support Available after Payment
+</p>
   <nav>
     <a href="index.html">Home</a>
     <a href="contact.html">Contact</a>
