Revise welcome message and services list
Updated the welcome heading and modified service descriptions.

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 <div class="container">
 
   <div class="card">
-    <h2>🚀 Welcome to AI Online</h2>
-    <p>
-      We provide modern AI solutions, online tools, and digital services
-      with fast, secure, and affordable systems.
-    </p>
-  </div>
+    <h1>Welcome to AI Online Services</h1>
 
-  <div class="card">
-    <h2>💳 Online Payment</h2>
-    <p>Pay securely using UPI, QR Code and WhatsApp confirmation.</p>
-    <a class="btn" href="contact.html">Contact for Payment</a>
+    <p>
+      We provide AI based online services, digital help, form assistance,
+      and paid support for individuals and small businesses.
+    </p>
+
+    <h2>Our Services</h2>
+    <ul>
+      <li>AI Online Support</li>
+      <li>Digital Assistance</li>
+      <li>Paid Online Help</li>
+    </ul>
   </div>
 
 </div>
