--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Online Services | aionline.in.net</title>
+  <title>AI Online Services | Digital & AI Support</title>
 
-<meta name="description" content="AI Online Services, Online Help, Digital Solutions, Payment Based Services in India">
+  <meta name="description" content="AI Online provides AI based online services, digital help, form assistance and paid online support in India.">
+  <meta name="keywords" content="AI Online, online services, AI help, digital support">
+  <meta name="author" content="AI Online">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<meta name="keywords" content="AI online, online services, AI help, digital services, payment website">
-
-<meta name="author" content="AI Online">
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -19,12 +18,12 @@
   <p>Smart Digital & AI Based Services</p>
   <nav>
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
 
 <div class="container">
-
   <div class="card">
     <h1>Welcome to AI Online Services</h1>
 
@@ -40,7 +39,6 @@
       <li>Paid Online Help</li>
     </ul>
   </div>
-
 </div>
 
 <footer>
