Refactor contact.html for clarity and updates
Removed unnecessary content and updated footer.

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Contact – AI Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -10,64 +9,20 @@
 
 <header>
   <h1>Contact Us</h1>
-
-<p>
-Email: support@aionline.in.net
-</p>
-
-<p>
-WhatsApp Support Available after Payment
-</p>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
-  </nav>
 </header>
 
 <div class="container">
-
   <div class="card">
-    <h3>💳 Pay via UPI</h3>
-
-<img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=upi://pay?pa=9800074626@upi&pn=AI%20Online"
-     alt="UPI QR Code"
-     style="margin:15px 0;border-radius:10px;">
-
-<br>
-
-<a class="btn"
-   href="upi://pay?pa=9800074626@upi&pn=AI Online&cu=INR">
-   Pay Now
-</a>
-    <br><br>
-
-<a class="btn"
-   style="background:#25D366"
-   href="https://wa.me/919800074626?text=Payment%20Done%20for%20AI%20Online">
-   ✅ Payment Done (WhatsApp)
-</a>
-
-    <br><br>
-<a class="btn"
-   href="https://docs.google.com/forms/d/e/1FAIpQLSe632ftcEOxunfdnDS4tD1fgAj26WuEEIAcyUMciuSar96guw/viewform"
-   target="_blank">
-   📝 Submit Payment Details
-</a>
-    
-    <h2>📧 Get in Touch</h2>
-    <p>Name: AI Online</p>
-    <p>UPI: <b>9800074626@upi</b></p>
+    <p><b>UPI:</b> 9800074626@upi</p>
+    <p>WhatsApp support available after payment.</p>
 
     <a class="btn" href="https://wa.me/919800074626">
-      WhatsApp Us
+      WhatsApp Support
     </a>
   </div>
-
 </div>
 
-<footer>
-  © 2026 AI Online
-</footer>
+<footer>© AI Online</footer>
 
 </body>
 </html>
