--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,25 @@
-<h1>Privacy Policy</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Privacy Policy – AI Online</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-<p>
-We respect your privacy. We do not collect personal data without user consent.
-Payments are processed via UPI. Information submitted through forms is used
-only for service purposes.
-</p>
+<header><h1>Privacy Policy</h1></header>
+
+<div class="container">
+  <div class="card">
+    <p>
+      AI Online respects user privacy. No personal data is shared.
+      Payments are processed via UPI. Information submitted is used
+      only for service delivery.
+    </p>
+  </div>
+</div>
+
+<footer>© AI Online</footer>
+
+</body>
+</html>
