Refactor index.html for improved layout and services
Updated the HTML structure to enhance content organization and added sections for services and payment options.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>AI Online Services | Digital & AI Support</title>
-
-  <meta name="description" content="AI Online provides AI based online services, digital help, form assistance and paid online support in India.">
-  <meta name="keywords" content="AI Online, online services, AI help, digital support">
-  <meta name="author" content="AI Online">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="style.css">
-</head>
 <body>
 
-<header>
+<header class="header">
   <h1>AI Online</h1>
   <p>Smart Digital & AI Based Services</p>
   <nav>
@@ -23,27 +10,52 @@
   </nav>
 </header>
 
-<div class="container">
+<section class="hero">
+  <h2>Welcome to AI Online Services</h2>
+  <p>
+    We provide AI based online services, digital help, form assistance,
+    and paid support for individuals and small businesses.
+  </p>
+  <a class="btn" href="#pay">Get Paid Support</a>
+</section>
+
+<section class="services">
+  <h2>Our Services</h2>
+
   <div class="card">
-    <h1>Welcome to AI Online Services</h1>
-
-    <p>
-      We provide AI based online services, digital help, form assistance,
-      and paid support for individuals and small businesses.
-    </p>
-
-    <h2>Our Services</h2>
-    <ul>
-      <li>AI Online Support</li>
-      <li>Digital Assistance</li>
-      <li>Paid Online Help</li>
-    </ul>
+    <h3>AI Online Support</h3>
+    <p>Instant AI-based help and solutions.</p>
   </div>
-</div>
+
+  <div class="card">
+    <h3>Digital Assistance</h3>
+    <p>Forms, documents & online services.</p>
+  </div>
+
+  <div class="card">
+    <h3>Paid Online Help</h3>
+    <p>Priority paid support via UPI.</p>
+  </div>
+</section>
+
+<section id="pay" class="payment">
+  <h2>Pay & Get Support</h2>
+
+  <img src="qr.png" alt="UPI QR Code">
+
+  <a class="btn pay" 
+     href="upi://pay?pa=9800074626@upi&pn=AI Online">
+     Pay via UPI App
+  </a>
+
+  <a class="btn whatsapp"
+     href="https://wa.me/919800074626?text=Payment%20Done%20for%20AI%20Online">
+     Payment Done → WhatsApp
+  </a>
+</section>
 
 <footer>
   © 2026 AI Online | All Rights Reserved
 </footer>
 
 </body>
-</html>
