--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<head>
+  <meta charset="UTF-8">
+  <title>AI Online Services</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="AI Online Services - Digital help, AI support, paid online assistance">
+
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
 <header class="header">
