--- a/payment.html
+++ b/payment.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+  <link rel="stylesheet" href="style.css">
 <meta charset="UTF-8">
 <title>UPI Payment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
