Fix image source for UPI QR Code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section id="pay" class="payment">
   <h2>Pay & Get Support</h2>
 
-  <img src="qr.png" alt="UPI QR Code">
+  <img src="QR.png" alt="UPI QR Code">
 
   <a class="btn pay" 
      href="upi://pay?pa=9800074626@upi&pn=AI Online">
