Revise About Us page structure and content

--- a/about.html
+++ b/about.html
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About Us – AI Online</title>
+  <meta charset="UTF-8">
+  <title>About | AI Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <h1>About AI Online</h1>
+<header class="header">
+  <h1>AI Online</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html" class="active">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
-<div class="container">
+<section class="container">
+  <h2>About AI Online</h2>
+  <p class="about-text">
+    AI Online is a digital service platform providing AI-based assistance,
+    online help, form filling support, and paid digital services for
+    individuals and small businesses.
+  </p>
+
   <div class="card">
+    <h3>Our Mission</h3>
     <p>
-      AI Online is a digital service platform providing AI based assistance,
-      online help and paid support to users.
+      To make digital and AI services simple, affordable, and accessible
+      for everyone.
     </p>
   </div>
-</div>
 
-<footer>© AI Online</footer>
+  <div class="card">
+    <h3>Why Choose Us?</h3>
+    <ul>
+      <li>✔ Fast Online Support</li>
+      <li>✔ Secure Payment via UPI</li>
+      <li>✔ Professional Digital Help</li>
+    </ul>
+  </div>
+</section>
+
+<footer>
+  © 2026 AI Online. All rights reserved.
+</footer>
 
 </body>
 </html>
