Update payment and support links in contact.html

--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
     <img src="QR.png" alt="UPI QR Code" class="qr">
 
     <a class="pay-btn"
-       href="upi://pay?pa=9800074626@upi&pn=AI Online&cu=INR">
-       Pay Now
+   href="upi://pay?pa=9800074626@upi&pn=AI Online&cu=INR">
+   Pay Now
     </a>
   </div>
 
@@ -39,11 +39,11 @@
       your payment screenshot.
     </p>
 
-    <a class="whatsapp-btn"
-       href="https://wa.me/919800074626?text=Hello%20AI%20Online,%20I%20have%20completed%20the%20payment."
-       target="_blank">
-       WhatsApp Support
-    </a>
+<a class="whatsapp-btn"
+   href="https://wa.me/919800074626?text=Hello%20AI%20Online,%20Payment%20completed"
+   target="_blank">
+   WhatsApp Support
+</a>
   </div>
 </section>
 
