--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <head>
   <meta charset="UTF-8">
-  <title>AI Online Services</title>
+  <title>AI Online Services | Digital & AI Support India</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="AI Online Services - Digital help, AI support, paid online assistance">
+<meta name="description" content="AI Online provides AI based digital services, online help, form assistance and paid support in India.">
+
+<meta name="keywords" content="AI online services, AI support India, digital assistance, online help">
+
+<meta name="author" content="AI Online">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
 </head>
