Enhance SEO with updated title and meta description
Updated the title and added a meta description for SEO.

--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About | AI Online</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About AI Online | AI Based Digital Services</title>
+<meta name="description" content="Learn about AI Online – a platform providing AI based assistance and paid digital support.">  
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
