Revise title and add meta description in contact.html
Updated the title and added a meta description for SEO.

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact & Payment | AI Online</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact AI Online | Pay & Get Support</title>
+<meta name="description" content="Contact AI Online for paid AI support. Pay via UPI and get WhatsApp assistance.">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
