Update UPI QR code image and attributes

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,12 @@
     <h3>Pay via UPI</h3>
     <p class="upi">UPI ID: <b>9800074626@upi</b></p>
 
-    <img src="QR.png" alt="UPI QR Code" class="qr">
+    <img 
+  src="upi-payment-ai-online.png"
+  alt="AI Online UPI Payment QR Code for Paid AI Support"
+  title="Scan & Pay AI Online UPI"
+  width="250"
+>
 
     <a class="pay-btn"
    href="upi://pay?pa=9800074626@upi&pn=AI Online&cu=INR">
