--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 <section id="pay" class="payment">
   <h2>Pay & Get Support</h2>
 
-  <img src="QR.png" alt="UPI QR Code">
+  <img 
+  src="upi-payment-ai-online.png"
+  alt="AI Online UPI Payment QR Code"
+  title="UPI Payment for AI Online Services"
+  class="qr-img"
+>
 
   <a class="btn pay" 
      href="upi://pay?pa=9800074626@upi&pn=AI Online">
