--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 
 <section id="pay" class="payment">
   <h2>Pay & Get Support</h2>
-
+  
+<h3>Pay via UPI</h3>
+<p>Scan the QR code to pay for AI Online paid digital services.</p>
   <img 
   src="upi-payment-ai-online.png"
   alt="AI Online UPI Payment QR Code"
