--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="google-site-verification" content="GzROEisYubtTz5QIclpOt_ZkbXAGxZHDcg1Py-851ZQ" />
   <meta charset="UTF-8">
   <title>AI Online Services | Digital & AI Support India</title>
 
