--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <meta charset="UTF-8">
   <title>AI Online Services | Digital & AI Support India</title>
 
-<meta name="description" content="AI Online provides AI based digital services, online help, form assistance and paid support in India.">
-
-<meta name="keywords" content="AI online services, AI support India, digital assistance, online help">
-
+<meta name="description" content="AI Online provides AI based digital services, online help, form assistance and paid UPI support in India.">
+<meta name="keywords" content="AI online services, digital help, UPI support, AI assistance India">
+<meta name="robots" content="index, follow">
+  
 <meta name="author" content="AI Online">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
