--- a/index.html
+++ b/index.html
@@ -76,6 +76,38 @@
   </a>
 </section>
 
+  <!-- Visitor Counter Start -->
+<div style="
+max-width:300px;
+margin:30px auto;
+padding:15px;
+text-align:center;
+background:#ffffff;
+border-radius:10px;
+box-shadow:0 4px 12px rgba(0,0,0,0.1);
+font-family:Arial, sans-serif;
+">
+
+  <div style="font-size:18px;font-weight:bold;color:#333;">
+    👁️ Total Visitors
+  </div>
+
+  <div style="margin-top:8px;">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=98765432&style=0006&nbdigits=6&type=page&initCount=0"
+         title="Website Visitors"
+         alt="Visitor Counter">
+  </div>
+
+  <div style="font-size:12px;color:#777;margin-top:6px;">
+    Trusted Online AI Services
+  </div>
+
+</div>
+<!-- Visitor Counter End -->
+<p style="text-align:center;font-size:14px;">
+Providing trusted AI online services across India
+</p>
+
 <footer>
   © 2026 AI Online | All Rights Reserved
 </footer>
