--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="Salary Statement.html">Contact</a>
+    
   </nav>
 </header>
 
