--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="Salary_Statement.html">Salary Statement/a>
+    <a href="Salary_Statement.html">Salary Statement</a>
     
   </nav>
 </header>
