--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -158,7 +158,7 @@ button.print-btn:hover { background: #138496; }
 </head>
 
 <body oncontextmenu="return false;"> 
-    <h2>Upload Excel File</h2>
+    <h2>Upload Excel software</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <div id="search_section">
@@ -178,26 +178,17 @@ button.print-btn:hover { background: #138496; }
 
 <script>
 // ================= SOURCE PROTECTION SCRIPT =================
-document.onkeydown = function(e) {
-    if(event.keyCode == 123) { // F12
-        return false;
-    }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) { // Ctrl+Shift+I
-        return false;
-    }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) { // Ctrl+Shift+C
-        return false;
-    }
-    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) { // Ctrl+Shift+J
-        return false;
-    }
-    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) { // Ctrl+U
-        return false;
-    }
-    if(e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)) { // Ctrl+S (Save)
-        return false;
-    }
-}
+
+document.addEventListener("keydown", function(e) {
+  if (
+    e.key === "F12" ||
+    (e.ctrlKey && e.shiftKey && ["I","C","J"].includes(e.key)) ||
+    (e.ctrlKey && ["U","S"].includes(e.key))
+  ) {
+    e.preventDefault();
+  }
+});
+
 // ================= END PROTECTION SCRIPT =================
     // ---------- UNIVERSAL HELPERS ----------
 
