--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Salary Statement (Protected)</title>
 
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
+<!-- Or from jsDelivr -->
+<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     
 <style>
@@ -158,7 +162,7 @@ button.print-btn:hover { background: #138496; }
 </head>
 
 <body oncontextmenu="return false;"> 
-    <h2>Upload Excel File</h2>
+    <h2>Upload Excel</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <div id="search_section">
