--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -162,7 +162,7 @@ button.print-btn:hover { background: #138496; }
 </head>
 
 <body oncontextmenu="return false;"> 
-    <h2>Upload Excel</h2>
+    <h2>Upload Excel file</h2>
 <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
 
 <div id="search_section">
@@ -313,7 +313,27 @@ const otherSheetName =
         opt.value = v;
         list.appendChild(opt);
     });
+document.getElementById("excel_file").addEventListener("change", function(e){
 
+    document.getElementById("search_section").style.display = "block";
+    document.getElementById("table_container").innerHTML =
+        "<b style='color:blue'>File detected...</b>";
+
+    try {
+        const file = e.target.files[0];
+        const reader = new FileReader();
+
+        reader.onload = function(ev){
+            document.getElementById("table_container").innerHTML =
+                "<b style='color:green'>Excel loaded</b>";
+        };
+
+        reader.readAsArrayBuffer(file);
+
+    } catch(err){
+        alert(err.message);
+    }
+});
     document.getElementById("search_section").style.display = "block";
     document.getElementById("table_container").innerHTML =
         "<b style='color:green;font-size:18px'>✔ Excel loaded successfully</b>";
